--- a/CodingTest/Python/Basic/1.md
+++ b/CodingTest/Python/Basic/1.md
@@ -30,3 +30,73 @@ nums = [100, 200, 300, 400, 500]
 </div>
 </details>
 
+
+<details>
+<summary>추가 공부</summary>
+<div markdown="1">       
+  
+  리스트의 요소를 삭제하는 방법에는 파이썬 내장함수 del, 리스트의 remove와 pop 함수를 사용하는 방법 **3가지** 가 있다.
+  
+  ### 1.del 함수 사용해 리스트 요소 삭제하기
+  ```python
+  >>a = [1, 2, 3]
+  >>del a[1]
+  >>a
+  [1, 3]
+  ```
+  del a[x]는 x번째 요솟값을 삭제한다. 여기에서는 a 리스트에서 a[1]을 삭제하는 방법을 보여준다. del 함수는 파이썬이 자체적으로 가지고 있는 삭제 함수이며 다음과 같이 사용한다.
+  ```python
+  del 객체
+  ```
+  > ※ 객체란 파이썬에서 사용되는 모든 자료형을 말한다.
+
+  다음처럼 슬라이싱 기법을 사용하여 리스트의 요소 여러 개를 한꺼번에 삭제할 수도 있다.
+  ```python
+  >>> a = [1, 2, 3, 4, 5]
+  >>> del a[2:]
+  >>> a
+  [1, 2]
+  ```
+  a[2:]에 해당하는 리스트의 요소들이 삭제되었다.
+  <br/>
+  <br/>
+  ### 2.리스트의 remove 함수 사용해 요소 제거
+  remove(x)는 리스트에서 첫 번째로 나오는 x를 삭제하는 함수이다.
+  ```python
+  >>> a = [1, 2, 3, 1, 2, 3]
+  >>> a.remove(3)
+  >>> a
+  [1, 2, 1, 2, 3]
+  ```
+  a가 3이라는 값을 2개 가지고 있을 경우 첫 번째 3만 제거되는 것을 알 수 있다.
+  ```python
+  >>> a.remove(3)
+  >>> a
+  [1, 2, 1, 2]
+  ```
+  remove(3)을 한 번 더 실행하면 다시 3이 삭제된다.
+  <br/>
+  <br/>
+  ### 3. 리스트의 pop 함수 사용해 요소 끄집어내기
+  pop()은 리스트의 맨 마지막 요소를 돌려주고 그 요소는 삭제한다.
+  ```python
+  >>> a = [1,2,3]
+  >>> a.pop()
+  3
+  >>> a
+  [1, 2]
+  ```
+  a 리스트 [1, 2, 3]에서 3을 끄집어내고 최종적으로 [1, 2]만 남는 것을 볼 수 있다.
+  <br/>
+  pop(x)는 리스트의 x번째 요소를 돌려주고 그 요소는 삭제한다.
+  ```python
+  >>> a = [1,2,3]
+  >>> a.pop(1)
+  2
+  >>> a
+  [1, 3]
+  ```
+  a.pop(1)은 a[1]의 값을 끄집어낸다. 다시 a를 출력해 보면 끄집어낸 값이 삭제된 것을 확인할 수 있다.
+  
+</div>
+</details>
